name:                raw-feldspar
version:             0.1
synopsis:            Resource-Aware Feldspar
description:         See README.md
license:             BSD3
license-file:        LICENSE
-- author:              Emil Axelsson
maintainer:          emax@chalmers.se
copyright:           Copyright (c) 2015, Emil Axelsson
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with: GHC == 7.10.3, GHC == 7.11.*

extra-source-files:
    README.md
    examples/*.hs
    tests/*.hs

source-repository head
  type:      git
  location: https://github.com/emilaxelsson/raw-feldspar.git

library
  exposed-modules:
    Data.Inhabited
    Data.VirtualContainer
    Feldspar.Representation
    Feldspar.Optimize
    Feldspar.Frontend
    Feldspar.Storable
    Feldspar
    Feldspar.Run.Representation
    Feldspar.Run.Frontend
    Feldspar.Run.Compile
    Feldspar.Run
    Feldspar.Vector
    Feldspar.Option
    Feldspar.Validated
    Haste.Aplite

  other-modules:
    Haste.Aplite.Export
    Haste.Aplite.Classes
    Haste.Aplite.CMD

  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    PatternSynonyms
    Rank2Types
    ScopedTypeVariables
    TypeFamilies
    TypeOperators
    ViewPatterns

  if impl(haste)
    build-depends: haste-lib >= 0.5 && < 0.6, haste-prim >= 0.5 && < 0.6
  else
    build-depends: haste-compiler >= 0.5 && < 0.6
    
  build-depends:
    array,
    base < 5,
    containers,
    imperative-edsl >=0.4.1,
    mtl,
    open-typerep >= 0.5,
    operational-alacarte,
    prelude-edsl,
    syntactic >= 3.4

  hs-source-dirs: src

test-suite NumSimpl
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: NumSimpl.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    open-typerep,
    raw-feldspar,
    syntactic,
    tasty-quickcheck,
    tasty-th

test-suite Compilation
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: Compilation.hs

  default-language: Haskell2010

  build-depends:
    base,
    mtl,
    raw-feldspar

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  build-depends:
    base,
    raw-feldspar

